<resources>
    <string name="app_name">TestCaseCFT</string>
    <string name="enter_bank_card_bin">Enter bank card BIN</string>
    <string name="number">Number</string>
    <string name="length">Length: </string>
    <string name="luhn">Luhn: </string>
    <string name="scheme">Scheme: </string>
    <string name="type">Type: </string>
    <string name="brand">Brand: </string>
    <string name="prepaid">Prepaid:</string>
    <string name="country">Country</string>
    <string name="numeric">Numeric: </string>
    <string name="alpha2">Alpha2:</string>
    <string name="countryName">Name:</string>
    <string name="emoji">Emoji:</string>
    <string name="currency">Currency:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="bank">Bank</string>
    <string name="nameBank">Name:</string>
    <string name="url">URL:</string>
    <string name="phone">Phone:</string>
    <string name="city">City:</string>
    <string name="get">Get</string>
</resources>